wk_taa_taaqa/src/objects/SFS_Asset__c.object
<CustomObject>
    <fields>
        <fullName>Account_CID_c__c</fullName>
        <label>Account CID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_c__c</fullName>
        <label>Account Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_PID__c</fullName>
        <label>Account PID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_c__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SFS Assets</relationshipLabel>
        <relationshipName>SFS_Assets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Actual_Alert_Message__c</fullName>
        <label>Actual Alert Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>SFS_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Subscription__c</fullName>
        <label>Current Subscription</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Price_Discount__c</fullName>
        <label>Customer Price Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <externalId>true</externalId>
        <label>SFS Asset Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Date__c</fullName>
        <label>Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <label>Opportunity Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>Order Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Rate_Plan_Charge__c</fullName>
        <label>Order Rate Plan Charge</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_List_Price__c</fullName>
        <label>Product List Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Year__c</fullName>
        <label>Product Year</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>SFS_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Line__c</fullName>
        <label>Quote Line</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Source__c</fullName>
        <label>Quote Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_By__c</fullName>
        <label>Required By</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_SFS_Asset__c</fullName>
        <externalId>true</externalId>
        <label>SFDC SFS Asset #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Year__c</fullName>
        <label>Tax Year</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Training Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Usage_End_Date__c</fullName>
        <label>Usage End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X18_Digit_TAA_Record_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit TAA Record ID</label>
        <type>Text</type>
    </fields>
    <label>SFS Asset</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SFS Assets Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SFS Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>